--- a/src/styles/full-style.scss
+++ b/src/styles/full-style.scss
@@ -2118,9 +2118,9 @@ button:focus {
 /* -----------------------------------------------------------------
     - Testimonials
 ----------------------------------------------------------------- */
-.swiper-container .swiper-wrapper {
-  min-height: 100%;
-}
+// .swiper-container .swiper-wrapper {
+//   min-height: 100%;
+// }
 
 .review-item {
   display: flex;
